test/cases/compile_errors/empty_while_loop_body.zig
export fn a() void {
    while(true);
}

// error
//
// :2:16: error: expected block or assignment, found ';'
